[package]
name = "mlua-extras"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
author = ["Zachary Boehm <Tired Fox>"]
description = "Extra helpers and functionality built on top of mlua for embedded lua development"
readme = "README.md"
homepage = "https://github.com/Tired-Fox/mlua-extras"
repository = "https://github.com/Tired-Fox/mlua-extras"
keywords = ["lua", "types", "mlua"]

[features]
mlua = ["dep:mlua"]
lua54 = ["mlua/lua54"]
lua53 = ["mlua/lua53"]
lua52 = ["mlua/lua52"]
lua51 = ["mlua/lua51"]
luajit = ["mlua/luajit"]
luau = ["mlua/luau"]
vendored = ["mlua/vendored"]
serialize = ["mlua/serialize"]
macros = ["mlua/macros"]
module = ["mlua/module"]
send = ["mlua/send"]
async = ["mlua/async"]

[dev-dependencies]
serde = { version = "1.0.210", features = ["derive"] }

[dependencies]
# TODO: Update this when the derive crate is pushed
mlua-extras-derive = { path = "./mlua_extras_derive", version = "0.0.1" }

mlua = { version = "0.9.9", optional = true, default_features = false }
strum = { version = "0.26.3", features = ["derive"] }
cfg-if = "1.0.0"

[[example]]
name = "typed"
required-features = ["mlua", "serialize"]
