[package]
name = "mlua-extras"
version = "0.0.3"
edition = "2021"
license = "MIT OR Apache-2.0"
author = ["Zachary Boehm <Tired Fox>"]
description = "Extra helpers and functionality built on top of mlua for embedded lua development"
readme = "README.md"
homepage = "https://github.com/Tired-Fox/mlua-extras"
repository = "https://github.com/Tired-Fox/mlua-extras"
keywords = ["lua", "types", "mlua"]

[package.metadata.docs.rs]
features = ["mlua", "lua54", "send", "async", "derive"]

[features]
mlua = ["dep:mlua"]
lua54 = ["mlua/lua54", "mlua"]
lua53 = ["mlua/lua53", "mlua"]
lua52 = ["mlua/lua52", "mlua"]
lua51 = ["mlua/lua51", "mlua"]
luajit = ["mlua/luajit", "mlua"]
luau = ["mlua/luau", "mlua"]
vendored = ["mlua/vendored", "mlua"]
serialize = ["mlua/serialize", "mlua"]
macros = ["mlua/macros", "mlua"]
module = ["mlua/module", "mlua"]
send = ["mlua/send", "mlua"]
async = ["mlua/async", "mlua"]
derive = ["dep:mlua-extras-derive"]

[dev-dependencies]
serde = { version = "1.0.210", features = ["derive"] }

[dependencies]
mlua-extras-derive = { path = "./mlua_extras_derive", version = "0.0.1", optional = true }

mlua = { version = "0.9.9", optional = true, default-features = false }
strum = { version = "0.26.3", features = ["derive"], default-features = false }

[[example]]
name = "macros"
required-features = ["mlua"]

[[example]]
name = "path"
required-features = ["mlua"]

[[example]]
name = "require"
required-features = ["mlua"]

[[example]]
name = "typed"
required-features = ["mlua", "derive", "serialize"]
