[lib]
proc-macro = true

[package]
name = "mlua-extras-derive"
version = "0.0.1"
edition = "2021"
author = ["Zachary Boehm <Tired Fox>"]
license = "MIT OR Apache-2.0"
description = "MLua extras macros"
readme = "README.md"
homepage = "https://github.com/Tired-Fox/mlua-extras"
repository = "https://github.com/Tired-Fox/mlua-extras/tree/main/mlua_extras_derive"
keywords = ["lua", "types", "mlua", "macros", "derive"]

[dependencies]
proc-macro-error = "1.0.4"
proc-macro2 = { version = "1.0.86", features = ["span-locations"] }
quote = "1.0.37"
syn = "2.0.77"
venial = "0.6.0"
